<resources>
    <string name="app_name">Daily Workouts</string>
    <string name="action_settings">Settings</string>
    <string name="day">Day</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="name">Name</string>
    <string name="breakfast">Breakfast</string>
    <string name="snack">Snack</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_workout">Daily workout for you</string>
    <string name="meal_plan">Meal plan</string>
    <string name="hiit">HIIT</string>
    <string name="stretching">Full Body Stretching</string>
    <string name="start_wo">Start Workout</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="next">Next</string>
    <string name="atau">or</string>
    <string name="reminder">Remind me in 10 minutes</string>
    <string name="watch_yt">Watch this video to know more about HIIT</string>
    <string name="deschiit">HIIT, or high-intensity interval training, is a training technique in which you give all-out, one hundred percent effort through quick, intense bursts of exercise, followed by short, sometimes active, recovery periods. This type of training gets and keeps your heart rate up and burns more fat in less time.</string>



    <string-array name="Planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="opensetting">Edit your profile</string>
    <string name="updateprofile">Profile updated!</string>
    <string name="notify">You will receive a notification within 10 minutes</string>
    <string name="videos">Play another video</string>
    <string name="networkDialog">Please enable your internet before pressing the button</string>
    <string name="noInternet">No internet connection</string>
</resources>
