<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        tools:context=".View.MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:id="@+id/header"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimaryDark"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/welcome_banner"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/background1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:context=".View.ListIItemActivity">

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dp"
                android:ellipsize="end"
                android:text="@string/welcome"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimary"
                android:textSize="32dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                android:onClick="onSaveClick"
                android:text="@string/meal_plan"
                android:textColor="@color/basicColor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_welcome" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_workout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ellipsize="end"
            android:text="@string/welcome_workout"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_banner" />


        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/hiit_card"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_workout">

            <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/hiitbackground"
                android:padding="18dp">


                <TextView
                    android:id="@+id/tv_snack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:ellipsize="end"
                    android:paddingLeft="8dp"
                    android:text="@string/hiit"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/notif_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="20dp"
            android:paddingHorizontal="20dp"
            android:background="@color/colorAccent"
            android:text="@string/reminder"
            android:textColor="@color/basicColor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hiit_card" />

        <!--<Button-->
            <!--android:id="@+id/setting_btn"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:paddingHorizontal="20dp"-->
            <!--android:background="@color/colorAccent"-->
            <!--android:text="@string/opensetting"-->
            <!--android:onClick="onNextClick"-->
            <!--android:textColor="@color/basicColor"-->
            <!--app:layout_constraintLeft_toLeftOf="parent"-->
            <!--app:layout_constraintRight_toRightOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@id/notif_btn" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>