<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:paddingBottom="20dp"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:id="@+id/header"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimaryDark"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>


        <ImageView
            android:id="@+id/activity_image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/activity_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_image" />

        <TextView
            android:id="@+id/activity_desc"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/deschiit"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_name" />

        <Button
            android:text="@string/start_wo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="41dp"
            android:onClick="onNextClick"
            android:paddingHorizontal="20dp"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorAccent"
            android:id="@+id/btn_go_to"
            app:layout_constraintTop_toBottomOf="@id/activity_desc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/hold_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/atau"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_go_to" />

        <TextView
            android:id="@+id/watch_video"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/watch_yt"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hold_or" />

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_player_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:videoId="cZnsLVArIt8"
            app:autoPlay="true"
            app:showFullScreenButton="false"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/watch_video"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>