<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        tools:context=".View.SettingProfileActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:id="@+id/header"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimaryDark"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>


        <ImageView
            android:id="@+id/image_local"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/buttonImage"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Choose image"
            android:textColor="@color/basicColor"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/image_local" />


        <TextView
            android:id="@+id/labelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="Name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonImage" />

        <EditText
            android:id="@+id/userNameInput"
            android:layout_width="325dp"
            android:layout_height="39dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelName" />

        <TextView
            android:id="@+id/labelGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:text="Gender"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userNameInput" />

        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelGender">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:checked="true"
                android:text="@string/radio_male"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/radio_female" />

        </RadioGroup>


        <TextView
            android:id="@+id/labelHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:text="Height"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioSex" />

        <EditText
            android:id="@+id/heightInput"
            android:layout_width="95dp"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/height"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelHeight" />

        <TextView
            android:id="@+id/textViewgender2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="cm"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toEndOf="@id/heightInput"
            app:layout_constraintTop_toTopOf="@id/heightInput" />


        <TextView
            android:id="@+id/labelWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:text="Weight"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heightInput" />


        <TextView
            android:id="@+id/textViewgender4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="kg"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toEndOf="@id/weightInput"
            app:layout_constraintTop_toTopOf="@id/weightInput" />

        <EditText
            android:id="@+id/weightInput"
            android:layout_width="95dp"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/weight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelWeight" />


        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginVertical="40dp"
            android:layout_marginRight="@android:dimen/thumbnail_width"
            android:background="@color/colorPrimaryDark"
            android:onClick="onSaveClick"
            android:text="Save"
            android:textColor="@color/basicColor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weightInput" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>