<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/basicColor"
        tools:context=".View.ListIItemActivity">

        <TextView
            android:id="@+id/days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:text="@string/breakfast"
            android:textSize="26dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/breakfast_con"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/days">

            <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="18dp">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/breakfast"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_breakfast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:ellipsize="end"
                    android:paddingLeft="8dp"
                    android:text="@string/breakfast"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/icon"
                    app:layout_constraintTop_toTopOf="@id/icon" />

                <TextView
                    android:id="@+id/breakfast"
                    android:layout_width="322dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="18dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_breakfast" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/snack_con"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/breakfast_con">

            <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="18dp">

                <ImageView
                    android:id="@+id/icon_s"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/snack"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_snack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:ellipsize="end"
                    android:paddingLeft="8dp"
                    android:text="@string/snack"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/icon_s"
                    app:layout_constraintTop_toTopOf="@id/icon_s" />

                <TextView
                    android:id="@+id/snack"
                    android:layout_width="322dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="18dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_snack" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/lunch_con"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/snack_con">

            <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="18dp">

                <ImageView
                    android:id="@+id/icon_l"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/lunch"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_lunch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:ellipsize="end"
                    android:paddingLeft="8dp"
                    android:text="@string/lunch"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/icon_l"
                    app:layout_constraintTop_toTopOf="@id/icon_l" />

                <TextView
                    android:id="@+id/lunch"
                    android:layout_width="322dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="18dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_lunch" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/dinner_con"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lunch_con">

            <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="18dp">

                <ImageView
                    android:id="@+id/icon_d"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/dinner"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_dinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:ellipsize="end"
                    android:paddingLeft="8dp"
                    android:text="@string/dinner"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/icon_d"
                    app:layout_constraintTop_toTopOf="@id/icon_d" />

                <TextView
                    android:id="@+id/dinner"
                    android:layout_width="322dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="18dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_dinner" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>